--- a/index.html
+++ b/index.html
@@ -15,4 +15,4 @@
   <li>아들1</li>
   <li>아들2</li>
   <li>딸1</li> </ul>
-지금 <a href="https://atom.io/" target="_blank">현재</a></body>
+지금 <a href="https://atom.io/" target="_blank">아톰 홈페이지</a></body>
